--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.4",
-    "@angular/cli": "~9.1.4",
     "@angular/cdk": "^9.2.4",
+    "@angular/cli": "~9.1.4",
     "@angular/common": "~9.1.4",
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "express": "^4.17.1",
     "net": "^1.0.2",
     "ng-chat": "^3.0.3",
     "ngx-treeview": "^6.0.2",
